# forge

./: .gitignore  AGENTS_TOOLS_MCP_EXPLAINED.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: AGENTS_TOOLS_MCP_EXPLAINED.md  AUTO_INDEXING.md  AUTO_INDEXING_QUICK_REFERENCE.md  COMPLETE_SYSTEM_FLOW_DIAGRAMS.md  CONTEXT_ENGINEERING_IMPLEMENTATION_SUMMARY.md  CONTEXT_ENGINEERING_PLAYBOOK.md  CONTEXT_ENGINEERING_QUICK_REFERENCE.py  FLOW_EXPLANATION_LOCAL_LLM.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_GUIDE.md  LOCAL_LLM_IMPLEMENTATION_GUIDE.md
editors/neovim/: README.md
editors/neovim/lua/forge/: init.lua
editors/neovim/plugin/: forge.vim
editors/vscode/: package-lock.json  package.json  tsconfig.json
editors/vscode/src/: aiService.ts  chatViewProvider.ts  extension.ts
forge/: __init__.py  cli.py  config.py
forge/agent/: __init__.py  forge_agent.py  llm.py  prompt_enhancer.py
forge/context/: __init__.py  call_graph.py  chunker.py  complexity_router.py  embedder.py  enhanced_retriever.py  git_context.py  playbook_verifier.py  retriever.py  scope.py  vector_store.py  window_optimizer.py
forge/mcp/: __init__.py  server.py
forge/tools/: __init__.py  file_tools.py  terminal.py  web_search.py
